Updated CSS and index page

--- a/_css/main.css
+++ b/_css/main.css
@@ -1,4 +1,4 @@
-/* font declarations */
+/* CSS page is added by Twana */
 @font-face {
     font-family: 'bitter';
     src: url('../_fonts/bitter-regular.eot');
